# Fast_API_Crash_Course

./: README.md  install-pyenv-win.ps1  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
